--- a/backend-api/requirements.txt
+++ b/backend-api/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-torch
-kornia
-opencv-python-headless
-Pillow
+torch==2.7.0
+kornia==0.8.1
+opencv-python-headless==4.11.0.86
+pillow==11.2.1
